# python-base-command

./: .gitignore  README.md  README.tmp.md  cli.py  env.template  pyproject.toml  pyproject_tmp.toml  requirements_suggestion.txt
.cursor/commands/: python-code-review-command.md  python-testing-command.md  python-tooling-command.md
.cursor/rules/: agent-behavior.mdc  code-organization.mdc  code-style.mdc  core-principles.mdc  env-setup.mdc  pre-commit.mdc  standard-libraries.mdc
.cursor/rules/optional/architectural-standards/: documentation-and-communication.mdc  error-handling-and-resilience.mdc  interface-design.mdc  layered-architecture.mdc  pattern-application-and-analysis.mdc  system-integrity.mdc
.cursor/rules/optional/infrastructure-standards/: architectural-principles.mdc  ci-cd-best-practices.mdc  containerization-and-orchestration.mdc  documentation-communication.mdc  infrastructure-as-code.mdc  infrastructure-principles.mdc  monitoring-and-observability.mdc  security-best-practices.mdc
.github/workflows/: pytest_by_marker.yml
python_base_command/: __init__.py  base.py  const.py  output.py  registry.py  runner.py  style.py  utils.py
scripts/ci/: pypi_from_github_latest.py  run_pytest_marker.py
scripts/django/: clean__pycache__.py  clean_migrations.py
tests/: test_base_command.py  test_dummy.py
usage_example/: greet.py
usage_example/commands/: greet.py  registry_cmd.py
