[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-base-command"
version = "0.1.0"
description = "Django-style BaseCommand framework for standalone Python CLI tools"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "custom-python-logger==2.0.13",
]
keywords = ["cli", "command", "argparse", "django", "management"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/yourusername/python-base-command"
Repository = "https://github.com/yourusername/python-base-command"
Issues = "https://github.com/yourusername/python-base-command/issues"

[tool.hatch.build.targets.wheel]
packages = ["base_command"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 120
